--- a/pages/p5/953924.md
+++ b/pages/p5/953924.md
@@ -1,4 +1,4 @@
-### 风起于青萍之末 恒大惊人逆转的背后信号(图)
+### 别对疫苗过于乐观：孙正义套现800亿美元的警示(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,75 +6,82 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="恒大 资金 房地产" src="https://img3.secretchina.com/pic/2020/9-9/p2772313a7303351-ss.jpg" style="height:337px; width:600px"/>
-  <br>
-   一时间，恒大的股票和债券价格大幅波动。（图片来源：Adobe Stock）
-   <span id="hideid" name="hideid" style="color:red;display:none;">
-    <span href="https://www.secretchina.com">
-    </span>
+ <p>
+  【看中国2020年11月27日讯】好久没有讲
+  <span href="https://www.secretchina.com/news/gb/tag/资产" target="_blank">
+   资产
+  </span>
+  配置的话题了，今天，借一个新闻来讲一下这方面的话题。
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
    </span>
-  </br>
+  </span>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月3日讯】经历了过山车一样的惊心动魄，
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/恒大" target="_blank">
-    恒大
-   </span>
+   一
   </strong>
-  又一次平稳落地。9月24日，
-  <strong>
-   房地产
-  </strong>
-  开发商恒大
-  <strong>
-   资金
-  </strong>
-  链断裂的传言不胫而走。虽然恒大很快辟谣，但依然是满城风雨，对冲基金才不会放过这个做空的机会，一时间，股票和债券价格大幅波动。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  在普通人的认识里，风起于青萍之末。
- </p>
- <p>
-  按原来的战略投资协议，若
-  <span href="https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%9C%8B%E6%81%92%E5%A4%A7%E9%9B%86%E5%9C%98" target="_blank">
-   恒大
+  最近，曾经的全球首富
+  <span href="https://www.secretchina.com/news/gb/tag/孙正义" target="_blank">
+   孙正义
   </span>
-  地产不能在明年1月31日前完成重组，就可能偿还1300亿战略投资
-  <span href="https://zh.wikipedia.org/zh-cn/%E8%B5%84%E9%87%91" target="_blank">
-   资金
+  及其软银公司做了一件大事，惊动了全世界。那就是：他出售了约800亿美元的资产，高位套现。
+ </p>
+ <p>
+  孙正义，我想大家都应该不陌生。这位风险投资人最广为人知的事迹，就是在阿里巴巴创业初期，投资了2000万美元。2014年阿里巴巴上市时，获得了3500倍的回报。当年的2000万美元，已经变成了700亿美元。这样的投资战绩，估计让巴菲特都汗颜，足可以一战封神。
+ </p>
+ <p>
+  除了阿里巴巴，孙正义还投资过雅虎、新浪、网易等公司。巅峰时期，还做过3天的世界首富，被称为投资奇才。尽管现在不是世界首富，可是身价也不菲。而他的投资眼光和投资业绩，足以让他成为殿堂级的投资大师，不逊色任何人。
+ </p>
+ <p style="text-align: center;">
+  <img alt="日本软银集团（Softbank Group)老板孙正义" src="https://img2.secretchina.com/pic/2019/12-2/p2573802a334180929-ss.jpg" style="height:337px; width:600px"/>
+  <br>
+   日本软银集团创始人兼CEO孙正义（图片来源：KAZUHIRO NOGI/AFP via Getty Images）
+  </br>
+ </p>
+ <p>
+  但是，就是这样一个大师，在当前全球股市都不断创出新高，包括美国三大股指以及日本韩国股指都创下了阶段新高的情况下，在号称
+  <span href="https://www.secretchina.com/news/gb/tag/疫苗" target="_blank">
+   疫苗
   </span>
-  ，或提供额外50%的股权补偿，这也是近期外界对恒大资金压力的最大担忧。
+  已经研发出来了，全球投资者对2021年资产价格和宏观经济增长都保持乐观的情况下，居然开始大规模抛售资产，囤积现金，是这个敏感的投资大师闻到了市场风险吗？我们先来看一下具体情况。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  在美银、德银、摩根大通、里昂、野村、渣打、瑞银等十多家国际投行发布看好恒大的分析报告之后，恒大旗下三只股票9月28日全线暴涨，债券市场也回归正常。
- </p>
- <p>
-  9月29日，恒大传出一则大消息，联手豪华朋友圈，一举搞定863亿
-  <span href="https://www.secretchina.com/news/gb/tag/资金" target="_blank">
-   资金
+  近日，在远程出席一场活动时，日本
+  <span href="https://www.secretchina.com/news/gb/tag/软银" target="_blank">
+   软银
   </span>
-  。在恒大的发展史上，这似乎是有一个既热血沸腾、又惊心动魄的故事。
- </p>
- <p>
-  当天到场的豪华朋友圈有：苏宁控股董事长张近东、正威国际董事局主席王文银、广田控股董事长叶远西、嘉寓集团董事长田家玉等战略投资者高管。
+  集团首席执行官孙正义表示，目前软银正大举抛售资产囤积现金以应对可能到来的最糟糕情况。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -89,7 +96,7 @@
   </div>
  </center>
  <p>
-  1300亿战略投资中的863亿资金，跟恒大地产签订补充协议，同意转为普通股权长期持有，且股权比例保持不变。
+  在11月17日的线上活动中，软银创始人兼CEO孙正义亮出了软银的持现“家底”，为软银的科技业投资策略正名。孙正义称，为了让软银获得流动性应对全球范围的紧急状况，他决定软银出手资产。“今后两到三个月，可能发生任何灾难。所以我们要为最坏情形未雨绸缪。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -104,7 +111,7 @@
   </div>
  </center>
  <p>
-  最后剩余的437亿战略投资中，恒大已与155亿战略投资商谈完毕，目前正在办理手续，另外282亿战略投资正在商谈中。
+  孙正义表示，他的公司原本计划出售价值400亿美元的资产，但为了保障流动性，最终出售了800亿美元的资产，这其中包括以400亿美元的价格出售英国芯片设计商安谋（ARM）以及价值200亿美元的阿里巴巴股票。抛售的现金会用来应对最坏的情况。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -119,7 +126,7 @@
   </div>
  </center>
  <p>
-  也就是说，恒大1300亿资金压力部分消失，明股实债的风险解除了一部分。
+  有800亿美元现金在手，一旦软银股价下跌，他就可以更积极地回购更多的股票，也可以继续投资私营企业和公开上市公司。不过孙正义并未置评他是否会让软银私有化，从公开市场退市。.
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -134,7 +141,7 @@
   </div>
  </center>
  <p>
-  资本是最聪明的，大资金更不愚蠢。恒大1300亿战略投资者敢放弃回购的权力，同意转为普通股权，背后一定有其逻辑。
+  孙正义警告，可能出现像雷曼兄弟2008年倒闭那样的事件，引起大范围崩盘。他说：“在这种情况下任何事都可能发生。可能有家大公司崩盘，制造全球‘多米诺效应’的金融风暴。可能只要一家银行就能酿成雷曼那样的危机”……“短期来看，我是悲观的。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -149,127 +156,7 @@
   </div>
  </center>
  <p>
-  显而易见的经济逻辑有两个：
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  1.通过这几年的合作里面，所有战略投资者都分享到了恒大的发展红利。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  2.他们对恒大的经营管理与健康发展高度认可，在衡量了现在赎回和继续投资的利弊之后，认为未来恒大还会给他们带来可观红利。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  简单来说，过去，恒大让合作伙伴尝到了甜头；未来，恒大可能还能让合作伙伴尝到更大的甜头。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  在隐性债务问题上，恒大这次算是吃了个哑巴亏。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  熟悉许家印风格的人都知道，以他的风格，绝对不允许此类事件再次出现，绝对不允许有这个隐性风险存在，所以恒大几乎是对照着资产负债表，全面梳理整顿了一遍。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  具备基础会计知识就知道，债务问题不只是债务问题，还涉及到资产和所有者权益。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  降低长期债务风险，要么降低负债规模，要么提升所有者权益。要想降低短期债务风险，要么降低短期负债，要么提升现金等流动资产规模。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  先看一下，恒大最近的一些大动作，是怎么影响其资产负债表的。
+  这和孙正义此前的立场一致。今年8月的电话会议上，孙正义表示，新冠疫情改变了一切，软银正为经济长期低迷及可能的机会做准备，“现金是我们的防御手段”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -285,7 +172,7 @@
  </center>
  <p>
   <strong>
-   提升现金等流动资产
+   二
   </strong>
  </p>
  <center>
@@ -301,7 +188,7 @@
   </div>
  </center>
  <p>
-  抢占“金九银十”，恒大在全国放出打七折的大招，并且发动全体员工卖房。截至9月24日，累计实现销售5049亿元，同比增长11.4%；销售回款4521亿元，同比增长51.3%。
+  简单地说，孙正义感受到了危机，主要来自外部。目前来说主要是疫情带来的全球性经济和金融风险。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -316,7 +203,7 @@
   </div>
  </center>
  <p>
-  在行业今年整体承压的情况下，这样的销售和销售回款数据相当优秀，反映在资产负债表上就是，现金等流动资产规模增加，提升了抗击短期债务风险能力。
+  早在今年3月，孙正义就在推特上写道：我对疫情的前景感到担忧。即便是疫苗研发成功在望，孙正义依然悲观。现在疫苗眼看就要来了，可谁知道今后两三个月会怎样呢？很明显，孙正义担心，即便疫苗出来了，今后几个月在疫苗没有大规模使用前，对于全球经济和资产价格，都是一个很大的风险点。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -331,9 +218,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   提升所有者权益
-  </strong>
+  首先，全球的疫情，没有减弱的趋势，还在加速上升。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -348,7 +233,11 @@
   </div>
  </center>
  <p>
-  9月17日，恒大汽车发布公告称，拟发行人民币股份在上海科创板上市，这意味着恒大汽车有望成为第一家科创板上市的新能源车企。
+  截止11月26日，全球
+  <span href="https://www.secretchina.com/news/gb/tag/新冠肺炎" target="_blank">
+   新冠肺炎
+  </span>
+  感染人数上升到了6132万左右，死亡病例超过了143万多，其中美国就感染了接近1325万多，死亡接近27万。欧洲几个大国的感染数和死亡人数都在快速上升。德、法等国已经采取了比较严格的封锁措施，未来几个月欧盟的经济增速将大幅度下降。而美国预计也将采取一定程度的封锁措施，比如纽约和加州已经开始部分封锁了。这意味着，短期内看不到疫情减缓的趋势。更为要命的是，已经到来的冬季流感季，可能会引爆新一轮高潮。世界两大经济引擎美国和欧洲加强封锁措施，消费将受到重创，失业率可能将大幅上升。所以未来至少是3个月，美国和欧洲的经济增速也将大幅度下降。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -363,11 +252,41 @@
   </div>
  </center>
  <p>
-  另外，据港交所9月28日披露，
+  而这些反映在资产价格上，就是股价等风险资产价格的调整。特别是美股带领的全球股市因为疫苗在暴涨后，大幅回调的风险越来越高了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  其次，疫苗的作用，其实是很值得怀疑的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  很多人对疫苗很乐观，不管是对
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  恒大旗下恒大物业集团有限公司向港交所递交主板上市申请，华泰国际、UBS、农业国际、建银国际、中信证券及海通国际为联席保荐人。
+  的疫苗也好，对美国的疫苗也好。都觉得只要疫苗出来了。经济就可以很快解封了，大家很快就可以随意出行，生活和工作会恢复正常。其实，我对这种设想还是怀有谨慎的态度。中国、俄罗斯的疫苗咱就不要说了，我是完全不信任的，当然也不会鼓励自己和家人去打这种疫苗。但是就算是辉瑞、莫德纳、还是阿斯利康宣称研发成功的疫苗，我也不是100%的信任。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -382,7 +301,7 @@
   </div>
  </center>
  <p>
-  子公司上市，或分拆上市，能够迅速提升所有者权益，而所有者权益提升了，公司的债务杠杆率也就下降了。
+  按照辉瑞的研究，其实在大选之前就已经研发成功了，只是拖到大选之后公布，这本身就将疫苗带上了政治色彩，这是我对它首先的印象就打折扣了。其次，辉瑞最初公布的疫苗有效性是在90%的，需要超低温冷藏疫苗；后来莫德纳研发成功的疫苗有效性达到了94.5%，而且不需需要超低温冷藏，算是超越辉瑞了。但是之后没几天，辉瑞又宣布经过进一步实验，疫苗的有效性高达95%，这又比莫德纳的有效性高了0.5%。不管这些数字是巧合还是科学是数据，总给人感觉就是在进行疫苗竞赛，为了打败对手而发布的人为数据，有种当年互相攀比亩产千斤还是亩产万斤的感觉。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -397,7 +316,7 @@
   </div>
  </center>
  <p>
-  很多公司上市后，为了保持最优杠杆率，即便不缺钱，也会多发些债券。反过来就是，本来债务杠杆率高的企业，一上市，杠杆率就迅速降下来了。
+  当然，我说的只是我的一种感觉，我还是相信美国辉瑞公司这样的医药巨头的诚信和科学，也相信美国等西方国家在疫苗审查上的严谨，应该不是当年中国的“大跃进”浮夸风可以比的。可是，万一这些巨头的疫苗在实际使用中没那么有效怎么办？这样的可能性当然是有的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -412,39 +331,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   消除或有债务，降低债务规模
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  9月29日，1300亿战略投资资金转为普通股，这可以视为或有债务降低，也就是负债减少，同时也提升了所有者权益，一举两得。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  另外，恒大还一直在减少显形债务规模，比如截止9月24日，恒大有息负债较3月末下降约534亿。这个简单粗暴，直接降低了债务规模，降低了债务风险。
+  我们注意到，辉瑞公司首先在公布疫苗成功的时候有个细节，说参加试验的志愿者有43538人，那么是不是说明这个疫苗比别的厉害多了？因为这么多人参加。但是辉瑞公布的结果，90%有效率是根据94位感染新冠的受试者的数据判断的，这还只是第1次中期分析的结论。如此短的时间内、得到这么有限的数据，就能判断疫苗的有效吗？退一步说，就算辉瑞的疫苗真达到了95%的有效性，那么意味着还有5%的无效性。如果十亿人接种，就有5000万是无效的。是否会有副作用或者有害姑且不论，而这5000万人就成为了高危人群。关键是10亿人中还不知道是哪5千万人无效，这也是很麻烦的事。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -463,22 +350,7 @@
   </ins>
  </center>
  <p>
-  恒大彻底疏通资产、负债，以及所有者权益等三大会计项目，系统的重整资产负债表，可以基本下个结论：
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  恒大打了一个漂亮的翻身仗，基本上解除了资金警报。
+  再退一步说，就算疫苗完全没问题，全部有效，而有多少人能够打到疫苗，有多少人愿意打疫苗，这都是问题。按照计划，明年年底能生产的疫苗不超过30亿只，这意味着全球还有40亿人在明年年底无法打疫苗。而在西方，也曾经出现过反疫苗思潮，很多人对疫苗是抵制的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -494,7 +366,7 @@
  </center>
  <p>
   <strong>
-   结语
+   三
   </strong>
  </p>
  <center>
@@ -510,7 +382,7 @@
   </div>
  </center>
  <p>
-  按照资产负债表分类，恒大几乎所有动作都指向一个方向：去杠杆。其实，不止是恒大，几乎中国国内所有房企也都指向这同一个方向。
+  如果疫情持续，那么在疫苗普及之前，全球很可能迎来第二次封闭，这无疑将冲击本已脆弱的经济。某种意义上说，疫情带来的医学风险是可预测的。但是，疫情带来的风险导致的次级风险，包括经济金融风险和社会风险，却是未知的，而且持续的时间会比较长。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -525,10 +397,7 @@
   </div>
  </center>
  <p>
-  <span href="https://zh.wikipedia.org/zh-cn/%E6%88%BF%E5%9C%B0%E4%BA%A7" target="_blank">
-   房地产
-  </span>
-  行业，加上杠杆就是金融业，卸下杠杆就是制造业。
+  这对经济和社会的打击，对金融市场和资产价格的打击，可能将会是巨大的。那些因为疫苗研发成功，提前计价的资产上涨的价格，可能将被打回原形。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -543,7 +412,7 @@
   </div>
  </center>
  <p>
-  当下大环境是中国全社会杠杆率太高了，企业、政府和居民部门负债达到GDP的250%，在世界100多个国家里排名前5位，宏观杠杆率是偏高的。
+  比如非常典型的就是美股，11月24日，在疫苗的喜讯和11月制造业PMI向好的双重支撑下，美股三大股指都上涨，幅度还可以，道指上涨了1.12%。而自美国大选日以来，道指累计已经上涨了13%左右，从辉瑞宣布疫苗研发成功以来，美股更是暴涨。接连三个公司宣布疫苗研发成功，每一次都是美股的兴奋剂，这都是对疫苗研发出来后，疫情得到控制的提前计价。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -558,7 +427,7 @@
   </div>
  </center>
  <p>
-  在中国，政策的影响非常大，判断政策趋势，必须有一些基本思路，不能按自己的喜好凭空猜测。
+  很多朋友说美股最近暴涨，都不敢入场了，担心是疫苗导致的诱多。这个当然是有可能的，因为疫苗正式使用要等到明年夏天之后，所以这半年时间里，如果疫情失控，带来更严格的经济封锁，按照美国欧洲的这种速度，说实话我是不乐观的。或者，如果疫苗在未来的使用中再出些问题，可能都是对股市的巨大打击。当然，对美股还有一个打击就是未来刺激政策的规模缩小，众议院提出的2.4万亿的规模可能远远达不到。我们知道，刺激方案是美股这个木偶后面提着的线，一旦刺激方案和疫苗都出问题，或者美国再次大规模经济封锁，美股基本就完了，高估值的美股将走上挤泡沫的过程。毕竟不管怎么说，这么糟糕的经济基本面是无法支撑美股继续上行的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -573,11 +442,7 @@
   </div>
  </center>
  <p>
-  站在政策制定者的角度，系统性风险，只能消化，不能刺破。人为刺破泡沫，危害比泡沫本身更大。如果主动戳破
-  <span href="https://www.secretchina.com/news/gb/tag/房地产" target="_blank">
-   房地产
-  </span>
-  泡沫，房地产商开发贷、政府地方债、居民房贷等等，如此庞大的债务危机爆发，该如何收场？
+  当然，疫苗接二连三的出来，对避险的黄金等贵金属资产也是巨大的打压，这两天黄金调整幅度比较大，现货伦敦金已经跌到了1823左右。和美国比较好的PMI制造业数据和疫苗有关。今年黄金的涨幅高达20%以上，有两个重大支撑，第一个就是疫情，第二个就是美元的超级宽松。现在因为疫苗的出现，给疫情的可防可控带来了乐观情绪，所以黄金下行调整是正常的。但也仅仅是调整，不是扭转。为什么呢？因为支撑黄金上行的美元宽松周期远远没有结束，最近美联储理事还在表态说美元零利率将持续到2024年，而美联储现在还在设法购买国债、商业债券。只要美元放水不停止，黄金的上涨周期就不会结束。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -592,7 +457,7 @@
   </div>
  </center>
  <p>
-  如果问题是系统性的，惩罚某个个体，没有太大的意义，因为无非是国家队接管，债务重组，换个牌子消化债务。换个主人，一切仍会继续。
+  如果这中间一旦疫苗失效，疫情反复，这都是黄金上涨的机会。而至于说美元本身，现在已经是非常重要的避险资产了，只要美股跌，美元首先就是上涨，避险资金会推高美元。而自从2008年以来，美元对欧元一直处于升值的大趋势中，目前也只是欧元的一个反弹。持续的时间也才7个月而已。目前美元欧元都在宽松，美国和欧洲经济都在封锁，欧洲封锁得更严重，而美国经济的后劲明显更足。一旦疫苗大量使用，美国经济复苏，美元的表现肯定会非常耀眼。欧元兑美元也将继续进入下行轨道，人民币的因为疫情而出现的短期升值也基本将结束，人民币怎么长上来的，未来将怎么跌回去，这个周期就是从6.5左右到7.2左右，基本是一个箱体运动。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -607,7 +472,7 @@
   </div>
  </center>
  <p>
-  针对房地产行业，必须打破土地垄断、土地财政和地方债务问题，这些问题不解决，针对一两家房企，根本没有啥用。真正需要解决的是，背后更深层的财富分配和利益分配，这才是扭曲的根源。
+  所以综合来说，从现在到明年4月份左右，是一段高风险的时间窗，什么样的黑天鹅都可能发生，不是说疫苗出来就万事大吉，安全了，不是这个概念。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -622,37 +487,7 @@
   </div>
  </center>
  <p>
-  恒大依靠豪华的朋友圈及时把问题解决了，无论从宏观还是微观角度看，这都是一件好事儿，否则以恒大的体量，后果真的不敢想象。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  看到恒大翻身的同时，也要注意到房地产市场的一个大变化：
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  未来几年，房企去杠杆将成为大浪潮，房地产剥离金融属性，回归居住属性，这个将成为今后社会财富分配的主逻辑。
+  作为投资大师，孙正义掌握的内幕信息远超我们。他的行动，必然有自己的道理！所以，我们也要注意风险，居安思危，做好两手准备！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -684,7 +519,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -716,13 +551,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948039.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948039.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948039.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/03/948039.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953924.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953924.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953924.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/27/953924.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/948039.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/953924.md' width='0px' height='0px'/>
