--- a/pages/nf4514/n12581514.md
+++ b/pages/nf4514/n12581514.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.28】宾州议会要求撤销选举认证" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229783569-600x400.jpg"/>
+<div><img alt="【大选更新11.28】宾州凭空冒出逾110万票" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/Getty-Mail-In-Ballot-600x400.jpg"/>
 <div class="caption">
- 2020年11月25日，美国宾夕法尼亚州葛底斯堡（Gettysburg），川普总统的私人律师鲁迪・朱利安尼出席选举听证会时，川普支持者在温德姆葛底斯堡酒店起立欢呼。(Samuel Corum/Getty Images)
+ 2020年10月20日，美国大选，马里兰州蒙哥马利县选举委员会Plumb Gar社区娱乐中心里，等待扫描的早期邮寄选票。(Alex Wong/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
