--- a/pages/nf4514/n12582938.md
+++ b/pages/nf4514/n12582938.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11.29】川普：FBI和司法部失踪了" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/145338-600x400.jpg"/>
+<div><img alt="【大选更新11.29】川普考虑任命特别检察官" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1287973454-600x400.jpg"/>
 <div class="caption">
  最新民调显示，川普在今天大选西语人群中的得票大幅增加。图为来自佛州的选民在挺川集会上。（施萍／大纪元）
 </div></div><hr/>
