--- a/pages/nf4514/n12582938.md
+++ b/pages/nf4514/n12582938.md
@@ -1,4 +1,4 @@
-### 【大选更新11.29】川普：FBI和司法部失踪了
+### 【大选更新11.29】川普考虑任命特别检察官
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -57,6 +57,21 @@
  情况的实时更新：
 </h4>
 <h3>
+ 川普考虑为“选举操纵”设立特别检察官
+</h3>
+<p>
+ 川普周日表示，他考虑任命一名特别检察官，调查2020年大选充斥的非法、操纵投票的争议。
+</p>
+<p>
+ 川普说，他因为在2017年解雇了FBI局长詹姆斯·科米（James Comey），触发司法部任命罗伯特·穆勒（Robert Mueller）为特别检察官，负责调查他与俄罗斯之间协调证据，调查的核心是：川普是否与俄罗斯共谋或协调以在选举中获得不公平的优势。
+</p>
+<p>
+ 尽管“通俄门”调查已经证实川普无罪，但科米和前FBI副局长安德鲁·麦凯布（Andrew McCabe）并没有因为他们在2016年大选中的角色而面临严厉的法律审查。
+</p>
+<p>
+ 川普说：“这整个事情陷入一个可怕的情况，这不应该发生，你知道，这是我们国家的尴尬，全世界的人都在谈论这件事，是的，我会考虑任命一名特别检察官。”川普说，这名检察官除了将调查2020年的选举舞弊指控，还并需调查2016年选举中发生的事情。
+</p>
+<h3>
  川普：推翻选举结果 需要勇敢的法官和立法机构
 </h3>
 <p>
@@ -92,6 +107,29 @@
 <p>
  川普说：“我只能说，在所有的欺诈行为中，没有人对我说，‘哦，FBI已经抓到了做这个计划的人。’”
 </p>
+<h3>
+ 加州选民：缓慢侵蚀自由是共产党在越南的所作所为
+</h3>
+<p>
+ 越南裔美国人Thuan Phan，两个月来每周末都与同乡移民一起参加支持川普总统的集会。他参加了2020年11月28日于加州亨廷顿海滩的停止窃选活动。自选举日以来，每周六都有成千上万的人在类似的示威活动中抗议选举舞弊。
+</p>
+<p>
+ Phan说，他们很佩服总统反对中国共产党的原则立场，越南被共产主义蹂躏，主要是受中国共产党的影响，中共的邪恶本性从未停止过，即使在今天人们也能看到它使用奴工和劳改营。
+</p>
+<p>
+ Phan表示，“对我来说，总统不仅在外交政策方面做得很好”，“我支持他为我们国家所做的方式、政策。”
+</p>
+<p>
+ Phan说，川普在刑事改革、创造就业和反对社会主义方面的政策都是选民真正关心的事情；此外，从现场来自拉美裔、黑人、亚裔的支持者就能知道，川普获得了少数族裔社区广泛的支持。
+</p>
+<figure class="wp-caption aligncenter" id="attachment_12583612" style="width: 450px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-29-at-11.38.10-AM-700x420.jpg">
+  <img alt="" class="size-medium wp-image-12583612" src="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-29-at-11.38.10-AM-700x420-450x270.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  2020年11月28日，Thuan Phan出席在加州亨廷顿海滩举行的停止窃选集会。（新唐人电视台）
+ </figcaption><br/>
+</figure><br/>
 <h3>
  川普：向最高法院上诉
 </h3>
