--- a/pages/nf4514/n12582938.md
+++ b/pages/nf4514/n12582938.md
@@ -57,6 +57,56 @@
  情况的实时更新：
 </h4>
 <h3>
+ 爱荷华州国会众议院共和党人有望以6票之差获胜
+</h3>
+<p>
+ 爱荷华州共和党国会议员候选人玛丽安内特·米勒·米克斯（Mariannette Miller-Meeks）周末表示，在第二国会选区重新计票后，她目前仅以6票优势领先民主党对手丽塔·哈特（Rita Hart）。
+</p>
+<p>
+ 米克斯在声明中说：“虽然比赛异常激烈，但我为赢得这场比赛而感到自豪，并期待在周一（11月30日）被州行政委员会认证为获胜者。能够当选为爱荷华州东部和南部的民众服务，是我一生的荣幸。”
+</p>
+<p>
+ 仅管米克斯已经发布了胜选声明，准备接替即将退休的众议员戴夫·勒布萨克（Dave Loebsack）的席位，不过，她的竞争对手哈特还没有承认败选。哈特的竞选经理扎克·穆尼尔（Zach Meunier）没有透露他们是否会提出法律诉讼。
+</p>
+<h3>
+ 数据专家：宾州与乔治亚州的计票结果不正常
+</h3>
+<p>
+ 数据专家贾斯汀·哈特（Justin Hart）对《纽约时报》选举日实时条目的分析，做了一个计算，发现关键州的票数统计数据存在“异常”，民主党候选人拜登的选票有明显波动，而这个计票结果使川普不得不丢失他的选票。
+</p>
+<p>
+ 哈特在推特上提到了这些数据条目，指出“你知道什么比大量选票流失、让拜登在威斯康星州和密歇根州领先还要更可疑吗？他们在宾州从川普手中夺走了选票！”
+</p>
+<p>
+ “这张图是川普从多米尼克25个数据转储中丢失的选票，丢失了97,676票！而拜登获得了16万多票！”
+</p>
+<blockquote class="twitter-tweet" data-width="550">
+ <p dir="ltr" lang="en">
+  You know what's even MORE suspicious than BIG vote dumps giving Biden the lead in WI and MI? Taking AWAY votes from
+  <ok href="https://twitter.com/realDonaldTrump?ref_src=twsrc%5Etfw">
+   @realDonaldTrump
+  </ok>
+  in Pennsylvania!
+ </p>
+ <p>
+  This chart: the 25 data dumps where Trump LOST votes from the Dominion feeds.
+ </p>
+ <p>
+  97,676 votes LOST! And Biden GAINED 160K+ votes!
+  <ok href="https://t.co/KsdlbXyIKb">
+   pic.twitter.com/KsdlbXyIKb
+  </ok>
+ </p>
+ <p>
+  — Justin Hart (@justin_hart)
+  <ok href="https://twitter.com/justin_hart/status/1329886440449138689?ref_src=twsrc%5Etfw">
+   November 20, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+</p>
+<h3>
  川普考虑为“选举操纵”任命特别检察官
 </h3>
 <p>
