--- a/pages/nf4514/n12582938.md
+++ b/pages/nf4514/n12582938.md
@@ -1,4 +1,4 @@
-### 【大选更新11.29】川普考虑任命特别检察官
+### 【大选更新11.29】川普拟任命特别检察官
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -56,6 +56,27 @@
  </ok>
  情况的实时更新：
 </h4>
+<h3>
+ 加州越裔选民：逐渐剥夺自由是共产主义所为
+</h3>
+<p>
+ 11月28日，在加州亨廷顿海滩（Huntington Beach）“停止窃选”集会上，越南裔人士潘顺（Thuan Phan）接受英文新唐人电视台采访时直言，此次大选存在疑点，而邮寄选票的背后是有人利用中共病毒限制民众自由，这种逐渐剥夺自由的方式正是共产主义国家的手段。
+</p>
+<p>
+ 潘顺说，在加州这个民主党州也大规模使用邮寄选票，当地居民认为此次大选没有安全保障。“很多邮寄选票，人们能偷窃选票，为所欲为”他说。
+</p>
+<p>
+ “而邮寄选票问题的起因是（中共病毒）大流行，他们利用这场病毒连续数月限制人们出行。”潘顺说，“这太可怕了，我在共产主义国家生活过，共产主义就是先一点点压榨民众，直至最后完全封闭。”
+</p>
+<p>
+ 潘顺连续两个月以来，每周六都参加“挺川集会”。从选举日（11月3日）以来，亨廷顿海滩每周六都有数千民众集会抗议选举舞弊。
+</p>
+<p>
+ 他说，这些集会的规模很大，包括各族裔人士，人们赞赏川普总统坚定的反共立场。
+</p>
+<p>
+ 他进一步表示，越南遭受共产主义破坏的很大原因是来自中共政权，中共的邪恶本质永远不会改变，比如我们看到，直到现在中共仍然使用奴工，仍然有劳改营。
+</p>
 <h3>
  爱荷华州国会众议院共和党人有望以6票之差获胜
 </h3>
