--- a/pages/nf4514/n12582938.md
+++ b/pages/nf4514/n12582938.md
@@ -344,7 +344,7 @@
     尽管“通俄门”调查已经证实川普无罪，但科米和前FBI副局长安德鲁·麦凯布（Andrew McCabe）并没有因为他们在2016年大选中的角色而面临严厉的法律审查。而去年被司法部长任命调查“通俄门”调查起源的美国检察官约翰·杜伦（John Durham）至今还没有公布众人期待已久的报告。
    </p>
    <p>
-    川普说：“这整个事情陷入一个可怕的情况，这不应该发生，你知道，这是我们国家的尴尬，全世界的人都在谈论这件事，是的，我会考虑任命一名特别检察官。”川普说，这名检察官除了将调查2020年的选举舞弊指控，还并需调查2016年选举中发生的事情。
+    川普说：“这整个事情陷入一个可怕的情况，这不应该发生，你知道，这是我们国家的尴尬，全世界的人都在谈论这件事，是的，我会考虑任命一名特别检察官。”
    </p>
    <p>
     川普说，自从他2015年宣布参选以来，他一直在接受调查和阻挠。
